@@ -1560,7 +1560,7 @@ class tx_bzdstaffdirectory_pi1 extends tx_oelib_templatehelper {
 	function email_jsencrypted($email)	{
 		$mailto = $this->cObj->getMailTo($email,$email);
 		$result = array();
-		$result['display'] = $mailto[1];
+		$result['display'] = $this->translate('label_send_email');
 		$result['begin'] = '<a href="'.$mailto[0].'">';
 		$result['end'] = '</a>';
 
