@@ -1,4 +1,5 @@
 version 0.9.0 - currently working on
+- [#3376] Change: If email addresses are JS encrypted, just a label is shown instead of the plain text address. (Thanks Rik for the patch!)
 - [#3024] Change: Now allowing bigger portrait images and file attachments
 - [#3036] Fix: Missing label in location records
 - [#3029] Feature: Added functions as database relations to persons (instead of text field)
